--- a/.github/workflows/main_restaurantweb-sade.yml
+++ b/.github/workflows/main_restaurantweb-sade.yml
@@ -51,7 +51,10 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -62,10 +65,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E2458BF257A747AF9E5F729DBA914AB1 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4E93B6958170485383331C9A67AB8DD0 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FD43525A06834C9AB476B0C90E17B48E }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'restaurantweb-sade'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0D2CC0F1D67649D6A6E8BFB83748EF48 }}
+          
