--- a/.github/workflows/main_restaurantweb-sade.yml
+++ b/.github/workflows/main_restaurantweb-sade.yml
@@ -1,71 +1,45 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - restaurantweb-sade
+name: Deploy Azure Infrastructure
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+    inputs:
+      resourceGroupName:
+        description: 'Name of the resource group'
+        required: true
+        default: 'restaurantweb-rg'
+      location:
+        description: 'Azure region to deploy resources'
+        required: true
+        default: 'Central US'
+      appServiceName:
+        description: 'Name of the App Service'
+        required: true
+        default: 'restaurantweb-sade'
 
 jobs:
-  build:
+  deploy-infrastructure:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python version
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      - name: Azure login
+        uses: azure/login@v1
         with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          
+      - name: Deploy ARM template
+        uses: azure/arm-deploy@v1
         with:
-          app-name: 'restaurantweb-sade'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E0B05638D3944C8BBA756C8296893C5F }}
+          resourceGroupName: ${{ github.event.inputs.resourceGroupName }}
+          template: ./azure-deploy.yml
+          parameters: >
+            appServiceName=${{ github.event.inputs.appServiceName }}
+            resourceGroupName=${{ github.event.inputs.resourceGroupName }}
+            location=${{ github.event.inputs.location }}
+            databasePassword=${{ secrets.DATABASE_PASSWORD }}
+          
+      - name: Azure logout
+        run: az logout
+        if: always()
